# calendar

./: .gitignore  Cargo.toml  README.md  agenda.txt  contatos.json
src/: contacts.rs  lib.rs  main.rs  ui.rs
tests/: integration_test.rs
